ci: update values, change repository

--- a/ci/values.yaml
+++ b/ci/values.yaml
@@ -12,8 +12,8 @@
 ##
 image:
   registry: ghcr.io
-  repository: tourmalinecore/auth-ui
-  tag: ""
+  repository: tourmalinecore/real-world/real-world-api
+  tag: "latest"
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
