--- a/ci/values.yaml
+++ b/ci/values.yaml
@@ -40,7 +40,7 @@ service:
 ingress:
   enabled: true
   hostname: "real-world.tourmalinecore.com"
-  path: "auth"
+  path: /auth/
   annotations:
       cert-manager.io/cluster-issuer: letsencrypt 
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
