--- a/ci/values.yaml
+++ b/ci/values.yaml
@@ -40,10 +40,11 @@ service:
 ingress:
   enabled: true
   hostname: "real-world.tourmalinecore.com"
-  path: /auth/
+  path: /auth(/|$)(.*)
   annotations:
       cert-manager.io/cluster-issuer: letsencrypt 
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/rewrite-target: /$2
   ingressClassName: "nginx"
   tls: true
 
